<resources>
    <string name="app_name">Winlator-Glibc</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="containers">Containers</string>
    <string name="input_controls">Input Controls</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="new_container">New Container</string>
    <string name="edit_container">Edit Container</string>
    <string name="creating_container">Creating Container…</string>
    <string name="removing_container">Removing Container…</string>
    <string name="duplicating_container">Duplicating Container…</string>
    <string name="installing_system_files">Installing System Files…</string>
    <string name="updating_system_files">Updating System Files…</string>
    <string name="starting_up">Starting up…</string>
    <string name="exiting">Exiting…</string>
    <string name="unable_to_install_system_files">Unable to install system files</string>
    <string name="keyboard">Keyboard</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="exit">Exit</string>
    <string name="no_control_element_selected">No control element selected</string>
    <string name="scale">Scale</string>
    <string name="shape">Shape</string>
    <string name="type">Type</string>
    <string name="binding">Binding</string>
    <string name="binding_secondary">Secondary binding</string>
    <string name="binding_up">Binding Up</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="overlay_opacity">Overlay Opacity</string>
    <string name="profile">Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="no_profile_found">No profile found</string>
    <string name="do_you_want_to_remove_this_profile">Do you want to remove this profile?</string>
    <string name="do_you_want_to_duplicate_this_profile">Do you want to duplicate this profile?</string>
    <string name="do_you_want_to_duplicate_this_preset">Do you want to duplicate this preset?</string>
    <string name="do_you_want_to_remove_this_container">Do you want to remove this container?</string>
    <string name="do_you_want_to_duplicate_this_container">Do you want to duplicate this container?</string>
    <string name="do_you_want_to_remove_this_shortcut">Do you want to remove this shortcut?</string>
    <string name="do_you_want_to_remove_this_controller">Do you want to remove this controller?</string>
    <string name="do_you_want_to_remove_this_wine_version">Do you want to remove this wine version?</string>
    <string name="do_you_want_to_remove_this_preset">Do you want to remove this preset?</string>
    <string name="do_you_want_to_end_this_process">Do you want to end this process?</string>
    <string name="controls_editor">Controls Editor</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="container">Container</string>
    <string name="screen_size">Screen Size</string>
    <string name="new_environment_variable">New Environment Variable</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="value">Value</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="processor_affinity_32_bit_apps">Processor Affinity (32-bit apps)</string>
    <string name="cursor_speed">Cursor Speed</string>
    <string name="relative_mouse_movement">Relative Mouse Movement</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="profile_exported_to">Profile exported to</string>
    <string name="unable_to_import_profile">Unable to import profile</string>
    <string name="wine_configuration">Wine Configuration</string>
    <string name="registry_keys">Registry Keys</string>
    <string name="font_dpi">Font DPI</string>
    <string name="renderer">Renderer</string>
    <string name="csmt">CSMT (Command Stream Multi-Thread)</string>
    <string name="gpu_name">GPU Name</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="strict_shader_math">Strict Shader Math</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="show_fps">Show FPS</string>
    <string name="none">None</string>
    <string name="custom_text">Custom Text</string>
    <string name="icon">Icon</string>
    <string name="import_profile">Import Profile</string>
    <string name="export_profile">Export Profile</string>
    <string name="touchpad_help">Touchpad Help</string>
    <string name="touchpad_help_mouse_left_click_title">Mouse Left-Click</string>
    <string name="touchpad_help_mouse_left_click_description">Short tap with one finger</string>
    <string name="touchpad_help_mouse_right_click_title">Mouse Right-Click</string>
    <string name="touchpad_help_mouse_right_click_description">Tap with one finger and short tap with another finger</string>
    <string name="touchpad_help_mouse_scroll_wheel_title">Mouse Scroll Wheel</string>
    <string name="touchpad_help_mouse_scroll_wheel_description">Two fingers tap and move</string>
    <string name="touchpad_help_main_menu_title">Main Menu</string>
    <string name="touchpad_help_main_menu_description">Four fingers tap</string>
    <string name="duplicate">Duplicate</string>
    <string name="about">About</string>
    <string name="credits_and_third_party_apps">Credits and Third-party apps</string>
    <string name="external_controllers">External Controllers</string>
    <string name="graphics_driver">Graphics Driver</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="loading">Loading…</string>
    <string name="press_any_button_on_your_controller">Press any button on your controller</string>
    <string name="bindings">bindings</string>
    <string name="show_touchscreen_controls">Show Touchscreen Controls</string>
    <string name="dxwrapper" translatable="false">DX Wrapper</string>
    <string name="mouse_warp_override">Mouse Warp Override</string>
    <string name="direct3d" translatable="false">Direct3D</string>
    <string name="directsound" translatable="false">DirectSound</string>
    <string name="directmusic" translatable="false">DirectMusic</string>
    <string name="directplay" translatable="false">DirectPlay</string>
    <string name="directshow" translatable="false">DirectShow</string>
    <string name="directx" translatable="false">DirectX</string>
    <string name="vcrun2010" translatable="false">Visual C++ 2010</string>
    <string name="wmdecoder" translatable="false">Windows Media Decoder</string>
    <string name="settings">Settings</string>
    <string name="exec_arguments">Exec Arguments</string>
    <string name="win_components">Win Components</string>
    <string name="drives">Drives</string>
    <string name="force_fullscreen">Force Fullscreen</string>
    <string name="range">Range</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="force">Force</string>
    <string name="installed_wine">Installed Wine</string>
    <string name="install_wine">Install Wine</string>
    <string name="arch" translatable="false">Arch</string>
    <string name="version">Version</string>
    <string name="unable_to_install_wine">Unable to install Wine</string>
    <string name="unable_to_remove_this_wine_version">Unable to remove this wine version</string>
    <string name="wine_version">Wine Version</string>
    <string name="removing_wine">Removing Wine…</string>
    <string name="preparing_installation">Preparing installation…</string>
    <string name="finishing_installation">Finishing installation…</string>
    <string name="storage_info">Storage Info</string>
    <string name="drive_c">Drive C:</string>
    <string name="cache">Cache</string>
    <string name="total">Total</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="estimated_used_space">Estimated Used Space</string>
    <string name="advanced">Advanced</string>
    <string name="box64" translatable="false">Box64</string>
    <string name="fex" translatable="false">FEX</string>
    <string name="system">System</string>
    <string name="box64_preset">Box64 Preset</string>
    <string name="fex_preset">FEX Preset</string>
    <string name="fex_version">FEX Version</string>
    <string name="box64_version">Box64 Version</string>
    <string name="letter">Letter</string>
    <string name="target_path">Target Path</string>
    <string name="xserver" translatable="false">XServer</string>
    <string name="use_dri3_extension">Use DRI3 extension</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="old">old</string>
    <string name="_new">new</string>
    <string name="task_manager">Task Manager</string>
    <string name="process_name">Process Name</string>
    <string name="pid">PID</string>
    <string name="memory">Memory</string>
    <string name="end_process">End Process</string>
    <string name="new_task">New Task</string>
    <string name="processes">Processes</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="open_file">Open File</string>
    <string name="download_file">Download File</string>
    <string name="do_you_want_to_download_the_selected_profiles">Do you want to download the selected profiles?</string>
    <string name="downloading_file">Downloading File…</string>
    <string name="unable_to_load_profile_list">Unable to load profile list</string>
    <string name="_copy">Copy</string>
    <string name="installed_version">Installed Version</string>
    <string name="unable_to_download_file">Unable to download file</string>
    <string name="stability">Stability</string>
    <string name="compatibility">Compatibility</string>
    <string name="intermediate">Intermediate</string>
    <string name="performance">Performance</string>
    <string name="preset">Preset</string>
    <string name="you_cannot_remove_this_preset">You cannot remove this preset</string>
    <string name="logs">Logs</string>
    <string name="enable_wine_debug">Enable Wine debug</string>
    <string name="enable_box64_logs">Enable Box64 logs</string>
    <string name="game_controller">Game Controller</string>
    <string name="as_button">Is Button</string>
    <string name="as_axis">Is Axis</string>
    <string name="trigger_type">Trigger Type</string>
    <string name="experimental">Experimental</string>
    <string name="enable_file_provider">Enable File Provider</string>
    <string name="imagefs">Imagefs</string>
    <string name="reinstall_imagefs">Reinstall Imagefs</string>
    <string name="midi_sound_font">MIDI SoundFont</string>
    <string name="sound">Sound</string>
    <string name="mixed">Mixed</string>
    <string name="virtual_buttons_haptics">Virtual buttons haptics</string>
    <string name="enable_startup_desktop_logs">Enable startup desktop logs</string>
    <string name="use_xr">Use OpenXR integration</string>
</resources>