<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">
                    <LinearLayout
                        android:id="@+id/LLInstalledWineList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <View style="@style/HorizontalLine" />

                    <Button
                        style="@style/ButtonPositive"
                        android:id="@+id/BTSelectWineFile"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:enabled="false"
                        android:visibility="gone"
                        android:text="@string/install_wine" />
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/installed_wine" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/box64_preset" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <Spinner
                            style="@style/ComboBox"
                            android:id="@+id/SBox64Preset"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageButton
                            style="@style/ListMenuButton"
                            android:id="@+id/BTAddBox64Preset"
                            android:src="@drawable/icon_add" />

                        <ImageButton
                            style="@style/ListMenuButton"
                            android:id="@+id/BTEditBox64Preset"
                            android:src="@drawable/icon_edit" />

                        <ImageButton
                            style="@style/ListMenuButton"
                            android:id="@+id/BTDuplicateBox64Preset"
                            android:src="@drawable/icon_duplicate" />

                        <ImageButton
                            style="@style/ListMenuButton"
                            android:id="@+id/BTRemoveBox64Preset"
                            android:layout_marginRight="0dp"
                            android:src="@drawable/icon_remove" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/box64" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fex_preset" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <Spinner
                            style="@style/ComboBox"
                            android:id="@+id/SFEXPreset"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageButton
                            style="@style/ListMenuButton"
                            android:id="@+id/BTAddFEXPreset"
                            android:src="@drawable/icon_add" />

                        <ImageButton
                            style="@style/ListMenuButton"
                            android:id="@+id/BTEditFEXPreset"
                            android:src="@drawable/icon_edit" />

                        <ImageButton
                            style="@style/ListMenuButton"
                            android:id="@+id/BTDuplicateFEXPreset"
                            android:src="@drawable/icon_duplicate" />

                        <ImageButton
                            style="@style/ListMenuButton"
                            android:id="@+id/BTRemoveFEXPreset"
                            android:layout_marginRight="0dp"
                            android:src="@drawable/icon_remove" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/fex" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/midi_sound_font" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/SMIDISoundFont"
                            style="@style/ComboBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageButton
                            android:id="@+id/BTInstallSF"
                            style="@style/ListMenuButton"
                            android:src="@drawable/icon_add" />

                        <ImageButton
                            android:id="@+id/BTRemoveSF"
                            style="@style/ListMenuButton"
                            android:layout_marginRight="0dp"
                            android:src="@drawable/icon_remove" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/sound" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cursor_speed"/>

                        <TextView
                            android:id="@+id/TVCursorSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/SBCursorSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:min="10"
                        android:max="200" />

                    <CheckBox
                        android:id="@+id/CBHaptics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/virtual_buttons_haptics"
                        android:layout_marginTop="8dp" />

                    <CheckBox
                        android:id="@+id/CBUseDRI3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_dri3_extension"
                        android:layout_marginTop="8dp" />

                    <CheckBox
                        android:id="@+id/CBUseXR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_xr"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/xserver" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">
                    <CheckBox
                        android:id="@+id/CBEnableWineDebug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_wine_debug" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/LLWineDebugChannels"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="4dp" />
                    </HorizontalScrollView>

                    <View style="@style/FieldSeparator" />

                    <CheckBox
                        android:id="@+id/CBEnableBox64Logs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_box64_logs"
                        android:layout_marginTop="8dp" />

                    <CheckBox
                        android:id="@+id/CBEnableStartupDesktopLogs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_startup_desktop_logs"
                        android:layout_marginTop="8dp" />
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/logs" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trigger_type"
                            android:layout_gravity="center"/>

                        <ImageView
                            android:id="@+id/BTHelpTriggerMode"
                            android:layout_gravity="center"
                            style="@style/HelpButton" />
                    </LinearLayout>


                    <RadioGroup
                        android:id="@+id/RGTriggerType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/RBTriggerIsButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/as_button"/>

                        <RadioButton
                            android:id="@+id/RBTriggerIsAxis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/as_axis"/>

                        <RadioButton
                            android:id="@+id/RBTriggerIsMixed"
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/mixed"/>
                    </RadioGroup>
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/game_controller" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/CBEnableFileProvider"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/enable_file_provider" />

                        <ImageView
                            android:id="@+id/BTHelpFileProvider"
                            android:layout_gravity="center"
                            style="@style/HelpButton" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/experimental" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/FieldSet">

                    <Button
                        style="@style/ButtonPositive"
                        android:id="@+id/BTReInstallImagefs"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/reinstall_imagefs" />
                </LinearLayout>

                <TextView
                    style="@style/FieldSetLabel"
                    android:text="@string/imagefs" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/BTConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:tint="#ffffff"
        android:src="@drawable/icon_confirm"
        android:layout_margin="16dp" />
</FrameLayout>
